force-app/main/default/objects/Invoice_Item__c/fields/lineItemId__c.field-meta.xml
<CustomField>
    <fullName>lineItemId__c</fullName>
    <externalId>true</externalId>
    <label>Line Item Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>