force-app/main/default/objects/Invoice_Item__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Salesforce Order resolved from the SAP OrderId on the line-item payload.</description>
    <label>Order</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Invoice Items</relationshipLabel>
    <relationshipName>Invoice_Items</relationshipName>
    <type>Lookup</type>
</CustomField>