force-app/main/default/objects/Invoice_Item__c/fields/Order_Item_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Order_Item_Quantity__c</fullName>
    <label>Order Item Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>