force-app/main/default/objects/Invoice_Item__c/fields/OrderId__c.field-meta.xml
<CustomField>
    <fullName>OrderId__c</fullName>
    <label>OrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>