force-app/main/default/objects/Invoice_Item__c/fields/OrderItem_Quantity__c.field-meta.xml
<CustomField>
    <fullName>OrderItem_Quantity__c</fullName>
    <description>Quantity received from SAP for the related Order Item.</description>
    <label>Order Item Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>