force-app/main/default/objects/Invoice_Item__c/fields/OrderItemId__c.field-meta.xml
<CustomField>
    <fullName>OrderItemId__c</fullName>
    <label>Order Item Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>