force-app/main/default/objects/Invoice_Item__c/fields/ProductCode__c.field-meta.xml
<CustomField>
    <fullName>ProductCode__c</fullName>
    <description>Product code from SAP. Used to resolve the Product__c lookup (matched against Product2.ProductCode).</description>
    <label>Product Code</label>
    <length>80</length>
    <type>Text</type>
</CustomField>