force-app/main/default/objects/Invoice_Item__c/fields/SAP_Order_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>SAP_Order_Item_Id__c</fullName>
    <externalId>true</externalId>
    <label>SAP Order Item Id</label>
    <length>80</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>