force-app/main/default/objects/Invoice_Item__c/fields/SF_OrderId__c.field-meta.xml
<CustomField>
    <fullName>SF_OrderId__c</fullName>
    <label>SF OrderId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>