force-app/main/default/objects/Invoice_Item__c/fields/Total_Amount_with_out_GST__c.field-meta.xml
<CustomField>
    <fullName>Total_Amount_with_out_GST__c</fullName>
    <label>Total Amount Excl. Tax</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>